--- a/index1.5
+++ b/index1.5
@@ -15,7 +15,7 @@
 
       <nav>
         <ol>
-			<li><a href="">home</a></li>
+			<li><a href="">home lol</a></li>
         <li><a href="">About me</a></li>
         <li><a href="">Commission</a></li>
         <li><a href="">My Artwork</a></li>
